Доработки
Добавление регистрации пользователя.
Добавление статуса у пользователя, функицонал подтверждения через почту
Добавление примеров работы с Redis, Rabbitmq, пакет эмулями почтовых отправлений mailpit
Настройка Docker контейнера
