# config/packages/nelmio_api_doc.yaml
@@ -33,6 +33,13 @@ nelmio_api_doc:
               type: boolean
             message:
               type: string
+        ErrorValidationResult:
+          type: object
+          properties:
+            code:
+              type: integer
+            message:
+              type: string
       security:
         - Bearer: []
     paths:
